--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
 <ul>
 <li><a href="CA_Estate_Tax.html" target="_blank">CA_Estate_Tax.html</a></li>
 <li><a href="Federal_Estate_Tax.html" target="_blank">Federal_Estate_Tax.html</a></li>
+<li><a href="Generation-Skipping Transfer Tax (GSTT).html" target="_blank">Generation-Skipping Transfer Tax (GSTT).html</a></li>
 <li><a href="Probate_In_CA.html" target="_blank">Probate_In_CA.html</a></li>
+<li><a href="Tax Cuts and Jobs Act (TCJA).html" target="_blank">Tax Cuts and Jobs Act (TCJA).html</a></li>
+<li><a href="Unified Gift and Estate Tax.html" target="_blank">Unified Gift and Estate Tax.html</a></li>
 <li><a href="assets_can_skip_probate.html" target="_blank">assets_can_skip_probate.html</a></li>
+<li><a href="charitable_contribution_deduction.html" target="_blank">charitable_contribution_deduction.html</a></li>
 <li><a href="estate_tax.html" target="_blank">estate_tax.html</a></li>
+<li><a href="gift_tax.html" target="_blank">gift_tax.html</a></li>
 <li><a href="life_insurance_annuities.html" target="_blank">life_insurance_annuities.html</a></li>
 <li><a href="markedown_website.html" target="_blank">markedown_website.html</a></li>
 <li><a href="probate.html" target="_blank">probate.html</a></li>
