--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 </style>
 </head>
 <body>
-<h1>Markdown File Index</h1>
+<h1>Hannah</h1>
 <h2>.</h2>
 <ul>
 <li><a href="CA_Estate_Tax.html" target="_blank">CA_Estate_Tax.html</a></li>
+<li><a href="CFP Certification include (1)life insurance and (2) annuities.html" target="_blank">CFP Certification include (1)life insurance and (2) annuities.html</a></li>
+<li><a href="CFP_Certified Financial Planner.html" target="_blank">CFP_Certified Financial Planner.html</a></li>
+<li><a href="CFP_Major_Topic_Areas.html" target="_blank">CFP_Major_Topic_Areas.html</a></li>
+<li><a href="CFP_The_Risk Management and Insurance Planning section.html" target="_blank">CFP_The_Risk Management and Insurance Planning section.html</a></li>
 <li><a href="Federal_Estate_Tax.html" target="_blank">Federal_Estate_Tax.html</a></li>
 <li><a href="Generation-Skipping Transfer Tax (GSTT).html" target="_blank">Generation-Skipping Transfer Tax (GSTT).html</a></li>
+<li><a href="Kaplan CFP Review.html" target="_blank">Kaplan CFP Review.html</a></li>
 <li><a href="Probate_In_CA.html" target="_blank">Probate_In_CA.html</a></li>
 <li><a href="Tax Cuts and Jobs Act (TCJA).html" target="_blank">Tax Cuts and Jobs Act (TCJA).html</a></li>
 <li><a href="Unified Gift and Estate Tax.html" target="_blank">Unified Gift and Estate Tax.html</a></li>
