--- a/CFP_Major_Topic_Areas.html
+++ b/CFP_Major_Topic_Areas.html
@@ -1,2 +1,124 @@
-<html><body>
+<html><body><p>Certainly! Here’s a detailed list of the <strong>major topic
+areas</strong> covered in the <strong>CFP Certification
+curriculum</strong>, broken down into their key subtopics. This overview
+aligns with the CFP Board Principal Knowledge Topics and provides a
+comprehensive guide for your study plan.</p>
+<hr />
+<h1 id="cfp-major-topic-areas-their-detailed-subtopics">CFP Major Topic
+Areas &amp; Their Detailed Subtopics</h1>
+<hr />
+<h3 id="professional-conduct-and-regulation">1. <strong>Professional
+Conduct and Regulation</strong></h3>
+<ul>
+<li>CFP Board Code of Ethics and Standards of Conduct</li>
+<li>Fiduciary duty and ethical responsibilities</li>
+<li>Client confidentiality and conflicts of interest</li>
+<li>Regulatory environment (SEC, FINRA, insurance regulations)</li>
+<li>CFP Board Disciplinary Rules and Procedures</li>
+<li>Anti-money laundering (AML) and compliance</li>
+<li>Recordkeeping and documentation standards</li>
+</ul>
+<hr />
+<h3 id="general-principles-of-financial-planning">2. <strong>General
+Principles of Financial Planning</strong></h3>
+<ul>
+<li>Financial planning process and client engagement</li>
+<li>Data gathering and analysis</li>
+<li>Goal setting and prioritization</li>
+<li>Time value of money concepts</li>
+<li>Financial statements and budgeting</li>
+<li>Cash flow management</li>
+<li>Communication skills and client education</li>
+<li>Behavior finance and client psychology</li>
+</ul>
+<hr />
+<h3 id="education-planning">3. <strong>Education Planning</strong></h3>
+<ul>
+<li>College savings goals and cost projections</li>
+<li>Financial aid fundamentals</li>
+<li>Education savings vehicles (529 plans, Coverdell ESAs)</li>
+<li>Custodial accounts (UGMA/UTMA)</li>
+<li>Tax considerations of education funding</li>
+<li>Student loans and repayment strategies</li>
+</ul>
+<hr />
+<h3 id="risk-management-and-insurance-planning">4. <strong>Risk
+Management and Insurance Planning</strong></h3>
+<ul>
+<li>Principles of risk and risk management</li>
+<li>Insurance needs analysis and gap analysis</li>
+<li>Life insurance products: term, whole, universal, variable</li>
+<li>Health insurance: types, Medicaid, Medicare, ACA</li>
+<li>Disability insurance and Social Security Disability</li>
+<li>Long-term care insurance</li>
+<li>Property and casualty insurance</li>
+<li>Annuities: fixed, variable, indexed, immediate, deferred</li>
+<li>Insurance contract law and policy provisions</li>
+<li>Insurance regulation and ethical considerations</li>
+</ul>
+<hr />
+<h3 id="investment-planning">5. <strong>Investment
+Planning</strong></h3>
+<ul>
+<li>Investment fundamentals and portfolio theory</li>
+<li>Asset classes and characteristics (equities, bonds, cash,
+alternatives)</li>
+<li>Risk and return concepts</li>
+<li>Diversification and asset allocation</li>
+<li>Investment vehicles: mutual funds, ETFs, stocks, bonds, REITs</li>
+<li>Tax-efficient investing</li>
+<li>Retirement plan investment options</li>
+<li>Portfolio management strategies</li>
+<li>Behavioral biases in investing</li>
+<li>Performance measurement and benchmarking</li>
+</ul>
+<hr />
+<h3 id="tax-planning">6. <strong>Tax Planning</strong></h3>
+<ul>
+<li>Federal income tax fundamentals</li>
+<li>Taxable vs. nontaxable income</li>
+<li>Filing status and tax brackets</li>
+<li>Deductions, credits, and exemptions</li>
+<li>Capital gains and losses</li>
+<li>Tax treatment of investments and retirement accounts</li>
+<li>Tax planning strategies (tax loss harvesting, timing income and
+deductions)</li>
+<li>Alternative Minimum Tax (AMT)</li>
+<li>Gift and estate tax basics</li>
+<li>Tax implications of business ownership</li>
+</ul>
+<hr />
+<h3 id="retirement-planning">7. <strong>Retirement
+Planning</strong></h3>
+<ul>
+<li>Retirement needs analysis and goal setting</li>
+<li>Social Security benefits and strategies</li>
+<li>Employer-sponsored retirement plans (401(k), 403(b), pension
+plans)</li>
+<li>IRAs (Traditional, Roth, SEP, SIMPLE)</li>
+<li>Distribution rules and required minimum distributions (RMDs)</li>
+<li>Retirement income strategies (withdrawal sequencing, annuities)</li>
+<li>Medicare and health care in retirement</li>
+<li>Planning for longevity risk and inflation</li>
+<li>Estate considerations in retirement planning</li>
+</ul>
+<hr />
+<h3 id="estate-planning">8. <strong>Estate Planning</strong></h3>
+<ul>
+<li>Estate planning process and client engagement</li>
+<li>Wills and trusts (revocable, irrevocable, testamentary, special
+purpose)</li>
+<li>Powers of attorney and advance directives</li>
+<li>Probate process and avoidance strategies</li>
+<li>Gift and estate tax fundamentals</li>
+<li>Strategies to minimize estate and inheritance taxes</li>
+<li>Charitable giving techniques</li>
+<li>Wealth transfer planning and generation skipping</li>
+<li>Trust administration and fiduciary responsibilities</li>
+<li>Business succession planning</li>
+</ul>
+<hr />
+<p>If you want, I can help you with <strong>detailed study guides,
+flashcards, or practice questions</strong> for any of these topic
+areas!</p>
 </body></html>
