--- a/index.html
+++ b/index.html
@@ -35,4 +35,12 @@
 <li><a href="trusts.html" target="_blank">trusts.html</a></li>
 <li><a href="when_need_Probate.html" target="_blank">when_need_Probate.html</a></li>
 </ul>
+<h2>cards</h2>
+<ul>
+<li><a href="cards/Baccarat_third card drawing rules.html" target="_blank">cards/Baccarat_third card drawing rules.html</a></li>
+<li><a href="cards/Top_table_games.html" target="_blank">cards/Top_table_games.html</a></li>
+<li><a href="cards/how_to_play_Baccarat.html" target="_blank">cards/how_to_play_Baccarat.html</a></li>
+<li><a href="cards/how_to_play_blackjack.html" target="_blank">cards/how_to_play_blackjack.html</a></li>
+<li><a href="cards/受欢迎的桌面游戏.html" target="_blank">cards/受欢迎的桌面游戏.html</a></li>
+</ul>
 </body></html>
