--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <h1>Hannah</h1>
 <h2>.</h2>
 <ul>
-<li><a href="CH_Porter_Ranch_Yourba_Linda.html" target="_blank">CH_Porter_Ranch_Yourba_Linda.html</a></li>
-<li><a href="Porter_Ranch_Yourba_Linda.html" target="_blank">Porter_Ranch_Yourba_Linda.html</a></li>
+<li><a href="CH_Compare_Races.html" target="_blank">CH_Compare_Races.html</a></li>
 </ul>
 </body></html>
